# Prometheus-Siren-pro

./: .env.example  .gitignore  README.md  SUBMISSION_CHECKLIST.md  commercialization_report.md  commercialization_strategy.md  dashboard.py  edge_implementation_plan.md  implementation_plan.md  phase2_implementation_plan.md  phase3_implementation_plan.md  problem_statement.txt  pyproject.toml  requirements.txt  session_checkpoint.md  system_flow.md  test_gemini.py  verify_upgrades.py  walkthrough.md
commercial/: docker-compose.yml  requirements.txt  verify_dashboard.py  verify_k8s.py  verify_local.py
commercial/dashboard/: index.html
commercial/docker/: Dockerfile
commercial/k8s/: injector-deployment.yaml  mutating-webhook-config.yaml  test-app.yaml
commercial/services/: agent_service.py  brain_service.py  dashboard_service.py  injector_controller.py  siren_service.py
commercial/src/: __init__.py  cli.py
report/: 01_Introduction.md  02_Architecture_Overview.md  03_Layer_1_Ingestion.md  03b_Multimodal_Strategy.md  04_Layer_2_Fast_Analysis.md  04b_Search_Memory_Logic.md  05_Layer_3_Deep_Analysis.md  06_Layer_4_Decision_Engine.md  07_Layer_5_Deception.md  08_Layer_6_Evolution.md  09_Global_Hive_Mind.md  10_Scalability_Deployment.md  11_Benchmarks_Results.md  12_Conclusion_Future.md  13_Limitations_Ethics.md  Jirachi_Engineering_Log.md  Prometheus_Siren_Complete_Report.md  Prometheus_Siren_Report.html  advanced_implementation_plan.md  future_roadmap.md  mythical_upgrade_report.md  project_evaluation.md
scripts/: benchmark.py  demo.py  generate_pdf.py  index_codebase.py  run_prometheus.py  run_siren.py  train_model.py  video_traffic_gen.py
src/: cli.py
src/core/: __init__.py  config.py  context_cache.py
src/jirachi-proxy/: Cargo.toml
src/jirachi-proxy/src/: main.rs
tests/: __init__.py  contracts.py  test_ast_parser.py  test_blueprints.py  test_integration.py  test_layer_by_layer.py  test_log_parser.py  test_ml.py
vulnerable_app/: app.py
(+47 files in other folders)
