[package]
name = "jirachi-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# The New Core Engine (Axum)
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# HTTP Client for Escalation
reqwest = { version = "0.11", features = ["json"] }

# JSON Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For forwarding requests (Reverse Proxy)
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
